# anc

./: .gitignore  README.md  main.py  model.ipynb  pyproject.toml  train.ipynb
anc/: dataset.ipynb  model.ipynb  p-err.txt  s-err.txt  test.ipynb  train.ipynb
dataset/: 1.ipynb
