[project]
name = "anc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "import-ipynb>=0.2",
    "ipykernel>=6.29.5",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]
